user-apps/media/nextpvr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextpvr
spec:
  selector:
    app: nextpvr
  ports:
    - protocol: TCP
      port: 8866
      targetPort: 8866
